# oryx

./: .dir-locals.el  .exrc  .gitignore  .gitmodules  .mailmap  BUGS  Cargo.toml  LICENSE  NOTES  README  TODO  cbs.h  grammar  grammar.ebnf  make.c  run.zsh  rustfmt.toml  test.x  test.xy  test.yx
oryxc/: Cargo.toml  build.rs
oryxc/src/: arena.rs  compiler.rs  errors.rs  hashtrie.rs  intern.rs  lexer.rs  main.rs  parser.rs  prelude.rs  size.rs  symtab.rs
oryxc/src/unicode/: default_ignorable_code_point.rs  line_terminator.rs  mod.rs  pattern_white_space.rs  xid_continue.rs  xid_start.rs
src/: alloc.c  alloc.h  analyzer.c  analyzer.h  arena.c  bitset.h  codegen.c  codegen.h  common.h  errors.c  errors.h  keywords.gperf  lexer-generic.c  lexer-sse4_1.c  lexer.c  lexer.h  main.c  parser.c  parser.h  primitives.gperf  scratch.c  strview.c  strview.h  symtab.c  symtab.h  tables.c  tables.h  types.h  unicode-avx2.c  unicode-data.h  unicode-neon.c  unicode-sse4_1.c  unicode.c  unicode.h
test/: arena.c  llvm-ir-tests.sh  test-internal.h
test/data/: constants.ll  constants.yx  globals.ll  globals.yx  nested-fns.ll  nested-fns.yx  static.ll  static.yx
unigen/: Cargo.toml  fetch
unigen/src/: main.rs
