[package]
name = "oryx"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-deque = "0.8.6"
dashmap = "6.1.0"
# icu = { version = "2.1.1", features = ["compiled_data"] }
clap = { version = "4", features = ["derive"] }
# num-rational = "0.4.2"
phf = { version = "0.13.1", features = ["macros"] }
soa-rs = "0.9.1"
unicode-width = "0.2.2"
