[package]
name = "oryxc"
version = "0.1.0"
edition = "2024"

[dependencies]
boxcar = "0.2.14"
clap = { version = "4", features = ["derive"] }
crossbeam-deque = "0.8.6"
dashmap = "6.1.0"
phf = { version = "0.13.1", features = ["macros"] }
soa-rs = "0.9.1"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"

[features]
fetch = ["dep:ureq", "dep:zip"]

[build-dependencies]
ureq = { version = "3.2.0", optional = true }
zip = { version = "8.2.0", optional = true }
